[package]
name = "AutoScan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
winput = "0.2.5"
clearscreen = "1.0.10"
winapi = { version = "0.3.9", features = ["winuser"] }
getch = "0.3.1"
savefile="0.11"
savefile-derive="0.11"

[profile.release]
opt-level = 3

